update to add restaurant and add user
